--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <span>4.5</span>
                             </div>
                             <div class="course-duration">
-                                <i class="far fa-clock"></i> 01:30hr
+                                 <span class="duration"><i class="far fa-clock"></i> 01:30 hr</span>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                 <span>4.5</span>
                             </div>
                             <div class="course-duration">
-                                <i class="far fa-clock"></i> 01:30hr
+                                 <span class="duration"><i class="far fa-clock"></i> 01:30 hr</span>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                                 <span>4.5</span>
                             </div>
                             <div class="course-duration">
-                                <i class="far fa-clock"></i> 01:30hr
+                               <span class="duration"> <i class="far fa-clock"></i>  01:30 hr</span>
                             </div>
                         </div>
                     </div>
@@ -170,5 +170,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
